--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  carousel_slider: ^5.0.0
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +64,8 @@ flutter:
   assets:
   
       - assets/images/Logo Alternative.png
-  #   - images/a_dot_ham.jpeg
+      - assets/images/Screenshot 2025-01-27 224255.png
+      - assets/images/Screenshot 2025-01-29 200016.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
