--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   carousel_slider: ^5.0.0
   flutter_staggered_grid_view: ^0.7.0
-
+  http: ^1.2.2
+  cached_network_image: ^3.2.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
